--- a/style.css
+++ b/style.css
@@ -17,35 +17,42 @@ body {
 
 .container{
     background-color:hsl(217, 19%, 24%);
-    width: 400px;
-    height: 225px;
+    max-width: 400px;
+    margin: 0 auto;
     text-align: center;
-    padding: 20px;
-    border-radius: 10px;
+    padding: 30px;
+    border-radius: 13px;
+    position: relative;
 }
 
 .title{
     color: hsl(150, 100%, 66%);
     text-transform: uppercase;
+    font-size: 14px;
     letter-spacing: 3px;
-    font-size: 0.7rem;
-    padding: 15px;
+    padding-bottom: 14px;
 }
 
 .advice {
-font-size: 1.5rem;
+font-size: 18px;
     color: white;
-    letter-spacing: 1px;
+    letter-spacing:1.1px;
+    margin-bottom: 20px;
 }
 
 .divider {
-    width: 85%;
-    padding: 30px;
+    width: 95%;
+    display: block;
+    margin-bottom: 20px;
+    margin: 0 auto;
 }
 
 .btn{
-    margin-top: -5px;
-    background:  hsl(150, 100%, 66%);
+    position: absolute;
+    left: 50%;
+    bottom: -31px;
+    transform: translateX(-50%);
+    background: hsl(150, 100%, 66%);
     border: none;
     padding: 15px 17px;
     border-radius: 50%;
@@ -56,5 +63,11 @@ font-size: 1.5rem;
 .btn:hover {
     background-color:  hsl(150, 100%, 66%);
     box-shadow: 0 4px 15px  hsl(150, 100%, 66%);
-    transform: translateY(-2px);
+}
+
+@media only screen and (max-width: 425px){
+    .container{
+        margin: 0 12px;
+        padding: 20px;
+    }
 }
