--- a/style.css
+++ b/style.css
@@ -28,23 +28,25 @@ body {
 .title{
     color: hsl(150, 100%, 66%);
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 0.875rem;
     letter-spacing: 3px;
     padding-bottom: 14px;
 }
 
 .advice {
-font-size: 18px;
+    font-size: 1.125rem;
     color: white;
+    line-height: 1.6;
     letter-spacing:1.1px;
     margin-bottom: 20px;
 }
 
 .divider {
     width: 95%;
+    margin-bottom: 40px;
     display: block;
-    margin-bottom: 20px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .btn{
